--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,33 @@ canvas#game {
   display: block;
   margin: 0 auto;
 }
+
+/* by https://google-webfonts-helper.herokuapp.com/fonts/noto-serif-jp?subsets=japanese,latin */
+
+/* noto-serif-jp-200 - latin_japanese */
+@font-face {
+  font-family: 'Noto Serif JP';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Noto Serif JP ExtraLight'), local('NotoSerifJP-ExtraLight'),
+       url('./fonts/noto-serif-jp-v7-latin_japanese-200.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/noto-serif-jp-v7-latin_japanese-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-serif-jp-regular - latin_japanese */
+@font-face {
+  font-family: 'Noto Serif JP';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Noto Serif JP'), local('NotoSerifJP-Regular'),
+       url('./fonts/noto-serif-jp-v7-latin_japanese-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/noto-serif-jp-v7-latin_japanese-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* noto-serif-jp-600 - latin_japanese */
+@font-face {
+  font-family: 'Noto Serif JP';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Noto Serif JP SemiBold'), local('NotoSerifJP-SemiBold'),
+       url('./fonts/noto-serif-jp-v7-latin_japanese-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+       url('./fonts/noto-serif-jp-v7-latin_japanese-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
